feat: finished the first endpoints unit tests + created some error case responses in open api spec
